# bot-berezka

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
src/: berezka_api.py  config.py  customers.py  notifications.py
