[tool.poetry]
name = "bot-berezka"
version = "0.1.0"
description = ""
authors = ["ChubAV <chub.aleksandr.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pika = "^1.3.0"
python-dotenv = "^0.21.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
